--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Example</title>
     </head>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
+    <iframe src="https://www.simbrief.com/ofp/flightplans/EDDMEDDN_PDF_1668542613.pdf" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    Your browser doesn't support iframes
+</iframe>
     </body>
 </html>
