--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <title>Example</title>
     </head>
     <body>
-    <iframe src="https://www.simbrief.com/ofp/flightplans/EDDMEDDN_PDF_1668542613.pdf" style="position:fixed; top:0; left:0; bottom:0; right:0; width:50%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-    Your browser doesn't support iframes
-</iframe>
+<iframe
+              id="ifamePdf"
+              type="application/pdf"
+              scrolling="auto"
+              src={"https://docs.google.com/viewerng/viewer?url="+"https://www.simbrief.com/ofp/flightplans/EDDMEDDN_PDF_1668542613.pdf"+"&embedded=true"}
+              height="600"
+            ></iframe>
     </body>
 </html>
